# second-brain

./: .canvas-config  .gitignore  CLAUDE.md  index.md  log.md
.claude/: settings.local.json
.claude/agents/: lyra.md  phy-ml-coach.md  pluto-engineer.md  teacher.md
.claude/commands/: phy-ml-coach.md  pluto-engineer.md
.obsidian/: graph.json  workspace.json
.wt/sessions/: 2026-05-03.json  2026-05-04.json
apps/teacher/: .env.example  .gitignore  README.md  pyproject.toml  server.py
apps/teacher/static/: index.html
apps/wiki-tutor/: .gitignore  README.md  pyproject.toml
apps/wiki-tutor/wt/: cli.py  constants.py  llm.py  main.py  render.py  server.py  wiki.py
apps/wiki-tutor/wt/web/: index.html
raw/articles/: 2026-04-29-giles-oxford-ai-learning.md  2026-04-29-sung-ai-learning-faster.md
raw/assets/: channel_gain.py  pure_plots.py  regret_matching.py
raw/daily/: 2026-04-23_Research_Questions.md  2026-04-23_pluto-sdr-deployment-architecture.md
raw/homework/: EEE350_HW7.md
raw/labs/: AM_Mod_coherent.slx  AM_Mod_coherent_tada_inc.slx  AM_Mod_incoherent.slx  Arduino_test.slx  Calibrate_Sensor.slx  Closed_loop_I_Ctrl.slx  Tones_1.slx  Tones_2.slx  eee-404-ec-ml-assignment.html  eee-404-ec-quantum-assignment.html  eee-404-report-template.html
raw/other/: datasets.md  online-courses.md  python learning roadmap.md
raw/textbook/: README.md  automate-boring-stuff.md  bishop-prml.md  boyd-convex-optimization.md  d2l-dive-into-deep-learning.md  deep-learning-with-python-chollet.md  deep-learning-with-pytorch.md  (+17 more)
scripts/: dashboard.py  download_slides.py
(+686 files in other folders)
